[tool.poetry]
name = "document_helpers"
version = "0.0.1"
description = ""
authors = ["Paul Gessinger <hello@paulgessinger.com>"]
license = "MIT"
packages = [{ include = "document_helpers", from = "src" }]

[tool.poetry.scripts]
sync_tags = 'document_helpers.sync_tags:main'
sort_docs = 'document_helpers.sort:main'
ingest = 'document_helpers.ingest:main'

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
coloredlogs = "^15.0.1"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
