[tool.poetry]
name = "document_helpers"
version = "0.0.1"
description = ""
authors = ["Paul Gessinger <hello@paulgessinger.com>"]
license = "MIT"
packages = [{ include = "document_helpers", from = "src" }]

[tool.poetry.scripts]
sync_tags = 'document_helpers.sync_tags:main'
sort_docs = 'document_helpers.sort:main'
ingest = 'document_helpers.ingest:main'
check = 'document_helpers.check:app'

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
coloredlogs = "^15.0.1"
requests = "^2.31.0"
typer = "^0.9.0"
rich = "^13.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
